topsql: add aggregate by table or db
